--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Flickr Browser</string>
     <string name="action_settings">Settings</string>
+    <string name="action_search">Search</string>
+    <string name="title_activity_search">Search Activity</string>
+    <string name="search_hint">Enter photo tags</string>
+    <string name="search_label">Search here</string>
 </resources>
